# yt-dlp-animepahe

./: .editorconfig  README.md  pyproject.toml
yt_dlp_plugins/extractor/animepahe/: __init__.py  animepahe.py  common.py
