[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yt_dlp_plugins"]

[project]
name = "yt-dlp-animepahe"
version = "2026.04.23"
description = 'extractor animepahae'
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
keywords = []
authors = [
  { name = "asepsukasusunirvatia", email = "210173402+asepsukasusunirvatia@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "yt-dlp[default]>=2025.12.08",
]

[project.urls]
Documentation = "https://github.com/asepsukasusunirvatia/yt-dlp-animepahe#readme"
Issues = "https://github.com/asepsukasusunirvatia/yt-dlp-animepahe/issues"
Source = "https://github.com/asepsukasusunirvatia/yt-dlp-animepahe"

[project.optional-dependencies]
static-analysis = [
    "ruff>=0.15.0",
]

[tool.hatch.envs.hatch-static-analysis]
detached = true
features = ["static-analysis"]
dependencies = []  # override hatch ruff version
config-path = "pyproject.toml"

[tool.hatch.envs.hatch-static-analysis.scripts]
format-check = "ruff format --check {args:.}"
format-fix = "ruff format {args:.}"
lint-check = "ruff check {args:.}"
lint-fix = "ruff check --fix {args:.}"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"
docstring-quotes = "double"
avoid-escape = false
