[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yt_dlp_plugins"]

[project]
name = "yt-dlp-animepahe"
dynamic = ["version"]
description = 'Animepahe extractor plugin for yt-dlp'
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
keywords = []
authors = [
  { name = "Asep5K", email = "asep5k@noreply.codeberg.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "yt-dlp[default]>=2025.12.08",
]

[project.urls]
Documentation = "https://codeberg.org/Asep5K/yt-dlp-animepahe/src/branch/main/README.md"
Issues = "https://codeberg.org/Asep5K/yt-dlp-animepahe/issues"
Source = "https://codeberg.org/Asep5K/yt-dlp-animepahe"

[project.optional-dependencies]
static-analysis = [
    "ruff>=0.15.0",
]

[tool.hatch.version]
path = "yt_dlp_plugins/extractor/animepahe/animepahe.py"
pattern = "__version__ = '(?P<version>[^']+)'"

[tool.hatch.envs.hatch-static-analysis]
detached = true
features = ["static-analysis"]
dependencies = []  # override hatch ruff version
config-path = "pyproject.toml"

[tool.hatch.envs.hatch-static-analysis.scripts]
format-check = "ruff format --check {args:.}"
format-fix = "ruff format {args:.}"
lint-check = "ruff check {args:.}"
lint-fix = "ruff check --fix {args:.}"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"
docstring-quotes = "double"
avoid-escape = false
